--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "build": "gridsome build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@gridsome/vue-remark": "^0.2.6",
     "gridsome": "^0.7.0",
     "gridsome-plugin-remark-shiki": "^0.6.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "gridsome-plugin-tailwindcss": "^4.1.1",
     "node-sass": "^6.0.1",
-    "sass-loader": "^10.1.1"
+    "postcss": "^7.0.36",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^10.1.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
