--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@gridsome/vue-remark": "^0.2.6",
+    "@noxify/gridsome-plugin-remark-embed": "^1.3.1",
     "gridsome": "^0.7.0",
     "gridsome-plugin-remark-shiki": "^0.6.0",
     "lodash": "^4.17.21",
