--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gridsome": "^0.7.0",
     "gridsome-plugin-remark-shiki": "^0.6.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "vue-disqus": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
