--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/vue-remark": "^0.2.6",
     "@noxify/gridsome-plugin-remark-embed": "^1.3.1",
     "dayjs": "^1.10.6",
     "gridsome": "^0.7.0",
     "gridsome-plugin-remark-shiki": "^0.6.0",
+    "gridsome-plugin-robots-txt": "^1.0.2",
     "gridsome-plugin-seo": "^1.0.2",
     "lodash": "^4.17.21",
     "vue-disqus": "^4.0.1"
