--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notebook",
   "private": true,
   "scripts": {
-    "develop": "gridsome develop",
+    "dev": "gridsome develop",
     "explore": "gridsome explore",
     "build": "gridsome build"
   },
